--- a/css/main.scss
+++ b/css/main.scss
@@ -1,26 +1,46 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
 body {
-    font: 'Raleway', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     color: rgba(0, 0, 0, 0.5);
     text-align: center;
     text-transform: uppercase;
     letter-spacing: .5em;
     top: 15%;
-    background: linear-gradient(to right, black, white);
+    width: 100%;
+    background: linear-gradient(to right, white, black);
+    text-shadow: 2px 2px 2px rgba(255, 255, 255, 1);
 }
 
 h1 {
-    font: 600 3.5em 'Raleway', sans-serif;
+    font: 600 3.5em 'Montserrat', sans-serif;
     color: rgba(0, 0, 0, 0.5);
     text-align: center;
     text-transform: uppercase;
     letter-spacing: .5em;
-    width: 100%
+    width: 100%;
+    text-shadow: 2px 2px 2px rgba(255, 255, 255, 1);
 }
 
 h3 {
-    font: 900 1em 'Raleway', sans-serif;
+    font: 900 1em 'Montserrat', sans-serif;
     color: rgba(0, 0, 0, 0.5);
     text-align: center;
     text-transform: none;
     letter-spacing: 0.01em;
+    text-shadow: 2px 2px 2px rgba(255, 255, 255, 1);
+}
+
+.row {
+    margin: 10px
+}
+
+@media only screen and (max-width: 425px) {
+    body {
+        letter-spacing: .1em;
+    }
+
+    h1 {
+        letter-spacing: .1em;
+    }
 }
